<resources>
    <string name="app_name">AFR SWAP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="strEmpty"></string>
    <string name="agence">Agence</string>
    <string name="numero_compte">Numero Compte</string>
    <string name="aaaa_mm_dd">mm/dd/aaaa</string>
    <string name="date_retrait">Date Retrait</string>
    <string name="account_login">Account Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="code_pin">CODE PIN :</string>
    <string name="veuillez_noter_votre_code_pin">Veuillez noter votre code PIN</string>
    <string name="motif">Motif</string>
    <string name="devise">Devise</string>
    <string name="montant">Montant</string>
    <string name="str_Personal_Info">Info Personel</string>
    <string name="africellrdc">Africell RDC.</string>
    <string name="bsudept">BSU/VAS.</string>
    <string name="str_Capture1">Take Picture &#38; uploader</string>
    <string name="selectsite">select Site</string>
    <string name="str_PersonalInfo">Personal Info.</string>
    <string name="str_Sim_Info">SIM Info.</string>
    <string-array name="NDC_array">
        <item>090</item>
        <item>091</item>
    </string-array>
    <string-array name="Gender_array">
        <item></item>
        <item>Feminin</item>
        <item>Masculin</item>
    </string-array>
    <string-array name="Education_array">
        <item></item>
        <item>Illetre</item>
        <item>Letre</item>
        <item>Elementaire</item>
        <item>Preparatoire</item>
        <item>Secondaire</item>
        <item>College</item>
    </string-array>
    <string-array name="Nationality_array">
        <item>Afghan</item>
        <item>Albanian</item>
        <item>Algerian</item>
        <item>American</item>
        <item>Andorran</item>
        <item>Angolan</item>
        <item>Antiguans</item>
        <item>Argentinean</item>
        <item>Armenian</item>
        <item>Australian</item>
        <item>Austrian</item>
        <item>Azerbaijani</item>
        <item>Bahamian</item>
        <item>Bahraini</item>
        <item>Bangladeshi</item>
        <item>Barbadian</item>
        <item>Barbudans</item>
        <item>Batswana</item>
        <item>Belarusian</item>
        <item>Belgian</item>
        <item>Belizean</item>
        <item>Beninese</item>
        <item>Bhutanese</item>
        <item>Bolivian</item>
        <item>Bosnian</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Bruneian</item>
        <item>Bulgarian</item>
        <item>Burkinabe</item>
        <item>Burmese</item>
        <item>Burundian</item>
        <item>Cambodian</item>
        <item>Cameroonian</item>
        <item>Canadian</item>
        <item>Cape Verdean</item>
        <item>Central African</item>
        <item>Chadian</item>
        <item>Chilean</item>
        <item>Chinese</item>
        <item>Colombian</item>
        <item>Comoran</item>
        <item>Congolese</item>
        <item>Costa Rican</item>
        <item>Croatian</item>
        <item>Cuban</item>
        <item>Cypriot</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Djibouti</item>
        <item>Dominican</item>
        <item>Dutch</item>
        <item>East Timorese</item>
        <item>Ecuadorean</item>
        <item>Egyptian</item>
        <item>Emirian</item>
        <item>Equatorial Guinean</item>
        <item>Eritrean</item>
        <item>Estonian</item>
        <item>Ethiopian</item>
        <item>Fijian</item>
        <item>Filipino</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Gabonese</item>
        <item>Gambian</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Ghanaian</item>
        <item>Greek</item>
        <item>Grenadian</item>
        <item>Guatemalan</item>
        <item>Guinea-Bissauan</item>
        <item>Guinean</item>
        <item>Guyanese</item>
        <item>Haitian</item>
        <item>Herzegovinian</item>
        <item>Honduran</item>
        <item>Hungarian</item>
        <item>I-Kiribati</item>
        <item>Icelander</item>
        <item>Indian</item>
        <item>Indonesian</item>
        <item>Iranian</item>
        <item>Iraqi</item>
        <item>Irish</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Ivorian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Jordanian</item>
        <item>Kazakhstani</item>
        <item>Kenyan</item>
        <item>Kittian and Nevisian</item>
        <item>Kuwaiti</item>
        <item>Kyrgyz</item>
        <item>Laotian</item>
        <item>Latvian</item>
        <item>Lebanese</item>
        <item>Liberian</item>
        <item>Libyan</item>
        <item>Liechtensteiner</item>
        <item>Lithuanian</item>
        <item>Luxembourger</item>
        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malawian</item>
        <item>Malaysian</item>
        <item>Maldivan</item>
        <item>Malian</item>
        <item>Maltese</item>
        <item>Marshallese</item>
        <item>Mauritanian</item>
        <item>Mauritian</item>
        <item>Mexican</item>
        <item>Micronesian</item>
        <item>Moldovan</item>
        <item>Monacan</item>
        <item>Mongolian</item>
        <item>Moroccan</item>
        <item>Mosotho</item>
        <item>Motswana</item>
        <item>Mozambican</item>
        <item>Namibian</item>
        <item>Nauruan</item>
        <item>Nepalese</item>
        <item>New Zealander</item>
        <item>Nicaraguan</item>
        <item>Nigerian</item>
        <item>Nigerien</item>
        <item>North Korean</item>
        <item>Northern Irish</item>
        <item>Norwegian</item>
        <item>Omani</item>
        <item>Pakistani</item>
        <item>Palauan</item>
        <item>Panamanian</item>
        <item>Papua New Guinean</item>
        <item>Paraguayan</item>
        <item>Peruvian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Qatari</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Rwandan</item>
        <item>Saint Lucian</item>
        <item>Salvadoran</item>
        <item>Samoan</item>
        <item>San Marinese</item>
        <item>Sao Tomean</item>
        <item>Saudi</item>
        <item>Scottish</item>
        <item>Senegalese</item>
        <item>Serbian</item>
        <item>Seychellois</item>
        <item>Sierra Leonean</item>
        <item>Singaporean</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Solomon Islander</item>
        <item>Somali</item>
        <item>South African</item>
        <item>South Korean</item>
        <item>Spanish</item>
        <item>Sri Lankan</item>
        <item>Sudanese</item>
        <item>Surinamer</item>
        <item>Swazi</item>
        <item>Swedish</item>
        <item>Swiss</item>
        <item>Syrian</item>
        <item>Taiwanese</item>
        <item>Tajik</item>
        <item>Tanzanian</item>
        <item>Thai</item>
        <item>Togolese</item>
        <item>Tongan</item>
        <item>Trinidadian or Tobagonian</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Tuvaluan</item>
        <item>Ugandan</item>
        <item>Ukrainian</item>
        <item>Uruguayan</item>
        <item>Uzbekistani</item>
        <item>Venezuelan</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
        <item>Yemenite</item>
        <item>Zambian</item>
        <item>Zimbabwean</item>
    </string-array>
    <string-array name="IdType_array">
        <item></item>
        <item>Carte D Identite</item>
        <item>Carte Electeur</item>
        <item>Permit de conduire</item>
        <item>TAX Locale</item>
        <item>Carte Officier</item>
        <item>Passport</item>
        <item>Carte Etudiant</item>
    </string-array>
    <string-array name="Town_array_kinshasa">
        <item></item>
        <item>Bandalungwa</item>
        <item>Barumbu</item>
        <item>Bumbu</item>
        <item>Gombe</item>
        <item>kalamu</item>
        <item>Kasavubu</item>
        <item>Kimbanseke</item>
        <item>Kinsenso</item>
        <item>Kinshasa</item>
        <item>Kintambo</item>
        <item>Lemba</item>
        <item>Limete</item>
        <item>Lingwala</item>
        <item>Makala</item>
        <item>Maluku</item>
        <item>Masina</item>
        <item>Matete</item>
        <item>Mont Ngafula</item>
        <item>Ndjili</item>
        <item>Ngaba</item>
        <item>Ngaliema</item>
        <item>Ngiri Ngiri  </item>
        <item>Nsele</item>
        <item>Selembao</item>
        <item>Other</item>
    </string-array>
    <string-array name="Town_array_Katanga">
        <item></item>
        <item>Ruashi</item>
        <item>Kampemba</item>
        <item>Kamalondo</item>
        <item>Kenya</item>
        <item>Katuba</item>
        <item>Lubumbashi</item>
        <item>Annexe</item>
        <item>Kolwezi</item>
        <item>Likazi</item>
        <item>Kasumbalesa</item>
        <item>Kipushi</item>
        <item>Other</item>
    </string-array>
    <string-array name="Town_array_congo">
        <item></item>
        <item>Road</item>
        <item>Matadi</item>
        <item>Boma</item>
        <item>Moanda</item>

        <item>Bandundu-ville</item>
        <item>Kenge</item>
        <item>Kikwit</item>
        <item>Masimanimba</item>
        <item>idiofa</item>

        <item>Other</item>
    </string-array>
    <string-array name="Town_array_kikwit">
        <item></item>
        <item>Bandundu-ville</item>
        <item>Kenge</item>
        <item>Kikwit</item>
        <item>Masimanimba</item>
        <item>idiofa</item>
        <item>Other</item>
    </string-array>
    <string-array name="Town_array_town">
        <item></item>
        <item>Kinshasa</item>
        <item>Bascongo</item>
        <item>Bandundu</item>
        <item>Katanga</item>
        <item>Other</item>
    </string-array>
    <string-array name="occupationCategory_array">
        <item></item>
        <item>NGO Sector</item>
        <item>Private Sector</item>
        <item>Public Sector</item>
        <item>Self-employed\Co. Owner, Privet Business</item>
        <item>Self-employed\Owner of Handwork, Handicraft</item>
        <item>Out of Work</item>
    </string-array>
    <string name="hello_world">Welcome to Africell System</string>
    <string name="_44">44</string>
</resources>