<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reguest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="guru.pmvungu.example.com.guru.Activity_reguest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_view_margin_top_0"
            android:visibility="visible">

            <!--controls-->
            <TextView
                android:id="@+id/lblMotif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="@string/motif"
                android:textSize="16sp"
                android:paddingTop="0dp"
                />
            <Spinner
                android:id="@+id/txtMotif"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblMotif"
                android:textSize="16sp"
                android:padding="5dip"
                android:background="@drawable/rounded_edittext"

                />

            <TextView
                android:id="@+id/lblACCOUNT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="@string/numero_compte"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:layout_below="@+id/txtMotif"/>

            <EditText
                android:id="@+id/txtACCOUNT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="16"
                android:inputType="number"
                android:layout_below="@+id/lblACCOUNT"
                android:layout_marginTop="5dp"
                android:padding="5dip"
                android:background="@drawable/rounded_edittext" />

            <TextView
                android:id="@+id/lblMONTANT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/montant"
                android:textSize="16sp"
                android:layout_below="@+id/txtACCOUNT"/>

            <EditText
                android:id="@+id/txtMONTANT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="7"
                android:inputType="number"
                android:layout_below="@+id/lblMONTANT"
                android:padding="5dip"
                android:background="@drawable/rounded_edittext" />
            <!--spinner with database see login activity agence-->

            <TextView
                android:id="@+id/lblDevise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="@string/devise"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:layout_below="@+id/txtMONTANT"/>

            <Spinner
                android:id="@+id/txtDevise"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblDevise"
                android:padding="5dip"
                android:background="@drawable/rounded_edittext"

                />
            <!--end spinner-->
            <TextView
                android:id="@+id/lblAgence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="@string/agence"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:layout_below="@+id/txtDevise"/>

            <Spinner
                android:dropDownHeight="10dp"
                android:id="@+id/txtAgence"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="16"
                android:inputType="text"
                android:layout_below="@+id/lblAgence"
                android:layout_marginTop="5dp"
                android:padding="5dip"
                android:background="@drawable/rounded_edittext"/>
<!--
            <Button
                android:id="@+id/btnBirthDatePick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialog"
                android:textSize="12sp"
                android:layout_below="@+id/txtAgence"
                android:layout_marginTop="15dp"

               />
-->
            <ImageButton
                android:layout_width="38dp"
                android:layout_height="37dp"
                android:id="@+id/btnBirthDatePick"
                android:background="@drawable/cal_icon"
                android:layout_below="@+id/txtAgence"
                android:layout_marginTop="12dp"
                android:onClick="showDatePickerDialog"
                />

            <EditText
                android:hint="@string/aaaa_mm_dd"
                android:layout_height="wrap_content"
                android:id="@+id/lblBirthDateValue"
                android:layout_above="@+id/validateButton"
                android:background="@drawable/rounded_edittext"
                android:layout_alignParentEnd="true"
                android:layout_width="200dp"
                android:enabled="false" />
            <!--
            <TextView
                android:text="@string/aaaa_mm_dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblBirthDateValue"
                android:layout_above="@+id/validateButton"
                android:layout_toEndOf="@+id/btnBirthDatePick"
                android:layout_marginStart="24dp" />

-->


            <Button
                android:id="@+id/validateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onValidateClick"
                android:text="Envoyer"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_button"
                android:layout_below="@+id/btnBirthDatePick"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/lblEmptySeparator4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/validateButton"
                />

            <TextView
                android:id="@+id/lblError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strEmpty"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_below="@+id/lblEmptySeparator4"
                android:textColor="@color/opaque_red"/>




        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
