<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/newloginrs"
    tools:context=".Activity_login">
    <!-- Login progress -->

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/lblVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/_44"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/login_mainS"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/logoafricell"
                android:contentDescription="" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:hint="User Name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="Password"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/sauvepwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/sendCode"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="save your password" />


            <TextView
                android:id="@+id/lblError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strEmpty"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/sauvepwd"
                android:textColor="@color/opaque_red"/>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="163dp"
                android:layout_height="@dimen/btnHeight"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:layout_below="@+id/lblError"
                android:text="SIGN IN"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.5"
        android:visibility="invisible"
        android:id="@+id/login_loadingoverlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleLargeInverse"
            android:progressDrawable="@xml/progressring"
            android:indeterminateTint="@color/colorPrimary"

            />
    </RelativeLayout>
</LinearLayout>
